tdf#48300 bring window to top and restore window when minimized.

While XWindow->ToTop() in Linux do the both for default ( None ),
ToTopFlags::RestoreWhenMin has to be specified in Windows in order
to restore the window, and ToTopFlags::ForegroundTask is necessary
when ToTopFlags::RestoreWhenMin is specified in order to bring
non-minimized window to the front.

Change-Id: Ief4a825a18d874a0c35211c9022a4261da6bcf8f
Reviewed-on: https://gerrit.libreoffice.org/23938
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>